--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="{{ "/images/favicon.ico"  | absolute_url }}" type="image/x-icon" />
+    <link rel="icon" href="/images/favicon.ico?" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueShift</title>
 </head>
